--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ About -->
             <div class="title-separator">
               <i class="glyph-icon flaticon-food-27"></i>
             </div>
-            <h2> <span class="text-orange">Welcome to</span> The Zayka</h2>
+            <h2> <span class="text-orange">Bienvenue sur</span> Ô'Fagot</h2>
             <p>Whatever your occasion, We makes it one to remember!</p>
           </div>
         </div>
